updated background color

--- a/css/Quick-Boost.css
+++ b/css/Quick-Boost.css
@@ -1,3 +1,4 @@
 Body{
-    background-color: aquamarine;
+    background: rgb(3,166,160);
+    background: linear-gradient(90deg, rgba(3,166,160,1) 18%, rgba(217,0,87,1) 61%); 
 }
