--- a/css/Quick-Boost.css
+++ b/css/Quick-Boost.css
@@ -1,4 +1,35 @@
+*{
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
 Body{
     background: rgb(2,214,206);
     background: linear-gradient(58deg, rgba(2,214,206,1) 21%, rgba(246,2,100,1) 61%); 
+    height: 1000px;
+    width: 99%;
+}
+
+.logo{
+    width: 300px;
+    height: 200px;
+}
+
+.footer{
+    height: 50px;
+    color: white;
+    background: rgb(246,2,100);
+    background: linear-gradient(90deg, rgba(246,2,100,1) 48%, rgba(2,214,206,1) 50%);
+    width: 100%;
+    
+}
+
+.footer-text{
+    position: relative;
+    top: 15px;
+    margin-left: 10px;
+    font-size: 20px;
+    margin-top: 10px;
+  
 }
