--- a/css/contact.css
+++ b/css/contact.css
@@ -36,24 +36,21 @@ Body{
   
 }
 
+header  {
+    display: flex;
+}
+
 #menu{
     list-style: none;
-    
+    display: flex;
 }
 
 .hoofdnav {
- 
-    position: relative;
-    top: -250px;
-    left: 700px;
     padding-left: 80px;
     text-decoration: none;
     list-style: none;
-    float: left;
     font-size: 35px;
     color: white;
-    
-    
 }
 
 a:hover{
@@ -68,23 +65,22 @@ a:hover{
     padding-left: 50vw;
 }
 
+main {   
+    display: flex;
+}
+
 #container1{
     margin: 0;
     padding: 0;
-    display: flex;
-    
-    height: 50px;
-    
 }
 
 
 #container2{  
     margin: 0;
     padding: 0;
-    display: flex;
     border: 4px solid white;
     color: white;
    font-size: 35px;
    font-weight: bolder;
    
-    }
+}
