--- a/css/contact.css
+++ b/css/contact.css
@@ -48,8 +48,14 @@ header  {
 }
 
 #icon1{
-    width: 20px;
+    width: 40px;
 }
+
+#container1 p{
+    font-size: 40px;
+    
+}
+
 
 .hoofdnav {
     padding-left: 80px;
@@ -76,6 +82,16 @@ main {
 
 
 #container2{  
+    margin: 0;
+    padding: 0;
+    border: 4px solid white;
+    color: white;
+   font-size: 35px;
+   font-weight: bolder;
+   
+}
+
+#container3{  
     margin: 0;
     padding: 0;
     border: 4px solid white;
