--- a/css/contact.css
+++ b/css/contact.css
@@ -3,9 +3,7 @@
 }
 
 Body{
-   
     background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-    
     width: 99%;
 }
 
@@ -18,18 +16,13 @@ Body{
 
 .footer{
     height: 50px;
-    color: white;
-    
+    color: white;    
     background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-    width: 101%;
-    
+    width: 101%;   
     margin-left: -10px;
 }
 
 .footer-text{
-    display: none;
-    position: absolute;
-    top: 10px;
     margin-left: 10px;
     font-size: 20px;
     margin-top: 20px;
@@ -43,25 +36,22 @@ header  {
 #menu{
     list-style: none;
     display: flex;
-   padding-left: 400px;
-   padding-top: 30px;
+    padding-left: 400px;
+    padding-top: 30px;
 }
 
 #icon1{
-    width: 40px;
+    width: 30px;
 }
 
-#container1 p{
-    font-size: 40px;
-    
-}
+
 
 
 .hoofdnav {
     padding-left: 80px;
     text-decoration: none;
     list-style: none;
-    font-size: 35px;
+    font-size: 40px;
     color: white;
 }
 
@@ -73,30 +63,32 @@ a:hover{
 
 main {   
     display: flex;
+    justify-content: center;
 }
 
 #container1{
     margin: 0;
     padding: 0;
+    margin-right: 50px;
+    font-size: 25px; 
 }
 
+#container1 img{
+    padding-right: 10px;
+}
 
 #container2{  
     margin: 0;
     padding: 0;
     border: 4px solid white;
     color: white;
-   font-size: 35px;
-   font-weight: bolder;
-   
+    font-size: 25px;
+    font-weight: bolder;   
+    margin-left: 50px;
+    margin-bottom: 105px;
 }
 
-#container3{  
-    margin: 0;
-    padding: 0;
-    border: 4px solid white;
-    color: white;
-   font-size: 35px;
-   font-weight: bolder;
-   
+#container2 p{
+    font-size: 30px;
+    padding-left: 40px;
 }
