--- a/css/contact.css
+++ b/css/contact.css
@@ -2,18 +2,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
-Body{
-    background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-    width: 99%;
-}
-
-
-
 
 /*bigscreen*/
 @media only screen and (min-device-width : 1024px) { 
 
-    Body{
+    body{
         background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
         width: 99%;
     }
@@ -67,13 +60,7 @@ Body{
     #icon1{
         width: 30px;
     }
-    
-    .bigscreen{
-        display: flex;
-        justify-content: center;
-    }
-
-    
+      
     #container1{
         margin: 0;
         padding: 0;
@@ -100,15 +87,33 @@ Body{
         font-size: 30px;
         padding-left: 40px;
     }
+
+    .bigscreen{
+        display: flex;
+        justify-content: center;
+
+    }
     
+    .tablet{
+        display: none;
+    }
 
+    .tabletlandscape{
+        display: none;
+    }
+    
+    .phone{
+        display: none;
+    }
 
+    .phonelandscape{
+        display: none;
+    }
 
+  
 }
 
-
-
-/*tablet potrait*/
+/*tablet*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
 
     Body{
@@ -160,55 +165,392 @@ Body{
         text-decoration: underline;
     }
     
+    #icon1{
+        width: 30px;
+    }
+
+    #container3{  
+        margin: 0;
+        padding: 0;
+        border: 4px solid white;
+        color: white;
+        font-size: 25px;
+        font-weight: bolder;   
+        margin-left: 35px;
+        margin-right: 40px;
+        margin-top: 40px;  
+    }
+
+    #container3 p{
+        font-size: 30px;
+        text-align: center;
+    }
+
+    #container4{
+        display: flex;
+        flex-direction: row;
+        padding-left: 40px;
+        margin-top: 40px;
+        margin-bottom: 160px;
+        font-size: 20px;
+        font-weight: bolder;
+       
+    }
+
+    #container4 img{
+        padding-right: 10px;
+    }
+
+    #container4 p{
+        padding-left: 35px;
+        padding-right: 35px;
+    }
+    
     .bigscreen{
-    display: none;
+        display: none;
+    }
+
+    .phone{
+        display: none;
+    }
+
+    .phonelandscape{
+        display: none;
+    }
+
+
+}
+
+/*tablet landscape*/
+@media (min-width: 768px) and (max-width: 1024px) {
+
+    Body{
+        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
+        width: 99%;
+    }
+
+    .logo{
+        width: 150px;
+        height: 280px;
+        position: relative;
+        top: -70px;
+    }
+
+    .footer{
+        height: 50px;
+        color: white;    
+        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
+        width: 101%;   
+        margin-left: -10px;
+    }
+
+    .footer-text{
+        margin-left: 10px;
+        font-size: 20px;
+        margin-top: 20px;
+    
+    }
+
+    header  {
+        display: flex;
+    }
+
+    #menu{
+        list-style: none;
+        display: flex;        
+        padding-top: 30px;
+    }
+
+    .hoofdnav {
+        padding-left: 50px;
+        text-decoration: none;
+        list-style: none;
+        font-size: 25px;
+        color: white;
+    }
+
+    a:hover{
+        text-decoration: underline;
     }
 
     #icon1{
-    width: 30px;
+        width: 30px;
+    }
+
+    #container5{  
+        margin: 0;
+        padding: 0;
+        border: 4px solid white;
+        color: white;
+        font-size: 25px;
+        font-weight: bolder;   
+        margin-left: 35px;
+        margin-right: 40px;
+        margin-top: 40px;
+
+    }
+
+    #container5 p{
+        font-size: 30px;
+        text-align: center;
+    }
+
+    #container6{
+        display: flex;
+        flex-direction: row;
+        padding-left: 40px;
+        margin-top: 40px;
+        margin-bottom: 160px;
+        font-size: 20px;
+        font-weight: bolder;
+    
+    }
+
+    #container6 img{
+        padding-right: 10px;
+    }
+
+    #container6 p{
+        padding-left: 35px;
+        padding-right: 35px;
     }
 
     .bigscreen{
-    display: flex;
-    justify-content: center;
+        display: none;
     }
 
 
-    #container1{
-    margin: 0;
-    padding: 0;
-    margin-right: 50px;
-    font-size: 25px; 
+    .phone{
+        display: none;
     }
 
-    #container3 img{
-    padding-right: 10px;
+    .phonelandscape{
+        display: none;
     }
 
-    #container4{  
+}
+
+/*phone*/
+@media screen and (max-width: 767px){
+
+    Body{
+        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
+        width: 99%;
+    }
+    
+    .logo{
+        width: 150px;
+        height: 280px;
+        position: relative;
+        top: -70px;
+    }
+    
+    footer{
+        height: 50px;
+        color: white;    
+        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
+        width: 101%;   
+        margin-left: -10px;
+    }
+    
+    .footer-text{
+        margin-left: 10px;
+        font-size: 20px;
+        margin-top: 20px;
+      
+    }
+    
+    header  {
+        display: flex;
+    }
+    
+    #menu{
+        list-style: none;
+        display: flex;        
+        padding-top: 30px;
+    }
+    
+    .hoofdnav {
+        padding-left: 50px;
+        text-decoration: none;
+        list-style: none;
+        font-size: 25px;
+        color: white;
+    }
+    
+    a:hover{
+        text-decoration: underline;
+    }
+    
+    #icon1{
+        width: 30px;
+    }
+         
+    #container7{  
+        margin: 0;
+        padding: 0;
+        border: 4px solid white;
+        color: white;
+        font-size: 25px;
+        font-weight: bolder;   
+        margin-left: 35px;
+        margin-right: 40px;
+        margin-top: 40px;
+    
+    }
+    
+    #container7 p{
+        font-size: 30px;
+        text-align: center;
+    }
+    
+    #container8{
+        display: flex;
+        flex-direction: row;
+        padding-left: 40px;
+        margin-top: 40px;
+        margin-bottom: 160px;
+        font-size: 20px;
+        font-weight: bolder;
+       
+    }
+    
+    #container8 p{
+        padding-left: 35px;
+        padding-right: 35px;
+    }
+    
+    #container8 img{
+        padding-right: 10px;
+    }
+
+    .bigscreen{
+        display: none;
+    }
+
+    .tablet{
+        display: none;
+    }
+
+    .tabletlandscape{
+        display: none;
+    }
+
+    .phonelandscape{
+        display: none;
+    }
+}
+
+/*landscape phone*/
+@media (min-width : 319px) and (max-width: 480px){
+    
+    Body{
+        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
+        width: 99%;
+    }
+    
+    .logo{
+        width: 150px;
+        height: 280px;
+        position: relative;
+        top: -70px;
+    }
+    
+    .footer{
+        height: 50px;
+        color: white;    
+        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
+        width: 101%;   
+        margin-left: -10px;
+    }
+    
+    .footer-text{
+        margin-left: 10px;
+        font-size: 20px;
+        margin-top: 20px;
+      
+    }
+    
+    header  {
+        display: flex;
+    }
+    
+    #menu{
+        list-style: none;
+        display: flex;        
+        padding-top: 30px;
+    }
+    
+    .hoofdnav {
+        padding-left: 50px;
+        text-decoration: none;
+        list-style: none;
+        font-size: 25px;
+        color: white;
+    }
+    
+    a:hover{
+        text-decoration: underline;
+    }
+    
+    #icon1{
+    width: 30px;
+    }
+   
+    #container9{  
     margin: 0;
     padding: 0;
     border: 4px solid white;
     color: white;
     font-size: 25px;
     font-weight: bolder;   
-    margin-left: 50px;
-    margin-bottom: 80px;
+    margin-left: 35px;
+    margin-right: 40px;
+    margin-top: 40px;
+    
     }
-
-    #container4 p{
+    
+    #container9 p{
     font-size: 30px;
-    padding-left: 40px;
+    text-align: center;
+    }
+    
+    #container10{
+        display: flex;
+        flex-direction: row;
+        padding-left: 40px;
+        margin-top: 40px;
+        margin-bottom: 160px;
+        font-size: 20px;
+        font-weight: bolder;
+       
+    }
+    
+    #container10 p{
+        padding-left: 35px;
+        padding-right: 35px;
     }
 
+    #container10 img{
+        padding-right: 10px;
+    }
 
+    .bigscreen{
+        display: none;
+    }
+
+    .tablet{
+        display: none;
+    }
+
+    .tabletlandscape{
+        display: none;
+    }
+
+    .phone{
+        display: none;
+    }
+    
 }
 
-/*ipad landscape*/
 
-@media (min-width: 768px) and (max-width: 1024px) {
-.bigscreen{
-    display: none;
-}
-
-}
