--- a/css/contact.css
+++ b/css/contact.css
@@ -4,7 +4,7 @@
 
 
 /*bigscreen*/
-@media only screen and (min-device-width : 1024px) { 
+@media only screen and (min-width : 1024px) { 
 
     body{
         background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
@@ -36,6 +36,10 @@
     header  {
         display: flex;
     }
+
+    article{
+        display: flex;
+    }
     
     #menu{
         list-style: none;
@@ -61,170 +65,51 @@
         width: 30px;
     }
       
-    #container1{
-        margin: 0;
-        padding: 0;
-        margin-right: 50px;
+    #socials{
         font-size: 25px; 
+        margin-left: 35px;
     }
     
-    #container1 img{
+    #socials p{
+        font-weight: bolder;
+    }
+
+    #socials img{
         padding-right: 10px;
     }
     
-    #container2{  
-        margin: 0;
-        padding: 0;
+    #faq{  
         border: 4px solid white;
         color: white;
         font-size: 25px;
         font-weight: bolder;   
-        margin-left: 50px;
+        margin-left: 100px;
         margin-bottom: 80px;
     }
     
-    #container2 p{
-        font-size: 30px;
-        padding-left: 40px;
-    }
-
-    .bigscreen{
-        display: flex;
-        justify-content: center;
-
-    }
-    
-    .tablet{
-        display: none;
-    }
-
-    .tabletlandscape{
-        display: none;
-    }
-    
-    .phone{
-        display: none;
-    }
-
-    .phonelandscape{
-        display: none;
-    }
-
-  
-}
-
-/*tablet*/
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
-
-    Body{
-        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-        width: 99%;
-    }
-    
-    .logo{
-        width: 150px;
-        height: 280px;
-        position: relative;
-        top: -70px;
-    }
-    
-    .footer{
-        height: 50px;
-        color: white;    
-        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-        width: 101%;   
-        margin-left: -10px;
-    }
-    
-    .footer-text{
-        margin-left: 10px;
-        font-size: 20px;
-        margin-top: 20px;
-      
-    }
-    
-    header  {
-        display: flex;
-    }
-    
-    #menu{
-        list-style: none;
-        display: flex;        
-        padding-top: 30px;
-    }
-    
-    .hoofdnav {
-        padding-left: 50px;
-        text-decoration: none;
-        list-style: none;
-        font-size: 25px;
-        color: white;
-    }
-    
-    a:hover{
-        text-decoration: underline;
-    }
-    
-    #icon1{
-        width: 30px;
-    }
-
-    #container3{  
-        margin: 0;
-        padding: 0;
-        border: 4px solid white;
-        color: white;
-        font-size: 25px;
-        font-weight: bolder;   
-        margin-left: 35px;
-        margin-right: 40px;
-        margin-top: 40px;  
-    }
-
-    #container3 p{
+    #faq p{
         font-size: 30px;
         text-align: center;
     }
 
-    #container4{
-        display: flex;
-        flex-direction: row;
-        padding-left: 40px;
-        margin-top: 40px;
-        margin-bottom: 160px;
-        font-size: 20px;
-        font-weight: bolder;
-       
-    }
-
-    #container4 img{
-        padding-right: 10px;
-    }
-
-    #container4 p{
-        padding-left: 35px;
-        padding-right: 35px;
-    }
+   #faq ul {
+       margin-right: 10px;
+   }
     
-    .bigscreen{
-        display: none;
-    }
+}
 
-    .phone{
-        display: none;
-    }
+/*tablet*/
+@media only screen and (min-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
 
-    .phonelandscape{
-        display: none;
-    }
-
-
+   
+ 
+    
 }
 
 /*tablet landscape*/
 @media (min-width: 768px) and (max-width: 1024px) {
 
-    Body{
+    body{
         background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
         width: 99%;
     }
@@ -277,7 +162,7 @@
         width: 30px;
     }
 
-    #container5{  
+    #socials{  
         margin: 0;
         padding: 0;
         border: 4px solid white;
@@ -290,12 +175,12 @@
 
     }
 
-    #container5 p{
+    #socials p{
         font-size: 30px;
         text-align: center;
     }
 
-    #container6{
+    #faq{
         display: flex;
         flex-direction: row;
         padding-left: 40px;
@@ -306,27 +191,15 @@
     
     }
 
-    #container6 img{
+    #faq img{
         padding-right: 10px;
     }
 
-    #container6 p{
+    #faq p{
         padding-left: 35px;
         padding-right: 35px;
     }
-
-    .bigscreen{
-        display: none;
-    }
-
-
-    .phone{
-        display: none;
-    }
-
-    .phonelandscape{
-        display: none;
-    }
+ 
 
 }
 
