--- a/css/contact.css
+++ b/css/contact.css
@@ -60,7 +60,6 @@
         text-decoration: underline;
     }
     
-
     #icon1{
         width: 30px;
     }
@@ -101,7 +100,95 @@
 /*tablet*/
 @media only screen and (min-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
 
-   
+    body{
+        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
+        width: 99%;
+    }
+    
+    .logo{
+        width: 300px;
+        height: 280px;
+        position: relative;
+        top: -70px;
+    }
+    
+    .footer{
+        height: 50px;
+        color: white;    
+        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
+        width: 101%;   
+        margin-left: -10px;
+    }
+    
+    .footer-text{
+        margin-left: 10px;
+        font-size: 20px;
+        margin-top: 20px;
+      
+    }
+    
+    header  {
+        display: flex;
+    }
+
+    article{
+        display: flex;
+        
+    }
+    
+    #menu{
+        list-style: none;
+        display: flex;
+        padding-left: 400px;
+        padding-top: 30px;
+    }
+    
+    .hoofdnav {
+        padding-left: 80px;
+        text-decoration: none;
+        list-style: none;
+        font-size: 40px;
+        color: white;
+    }
+    
+    a:hover{
+        text-decoration: underline;
+    }
+    
+    #icon1{
+        width: 30px;
+    }
+      
+    #socials{
+        font-size: 25px; 
+        margin-left: 35px;
+    }
+    
+    #socials p{
+        font-weight: bolder;
+    }
+
+    #socials img{
+        padding-right: 10px;
+    }
+    
+    #faq{  
+        border: 4px solid white;
+        color: white;
+        font-size: 25px;
+        font-weight: bolder;   
+        margin-left: 100px;
+        margin-bottom: 80px;
+    }
+    
+    #faq p{
+        font-size: 30px;
+        text-align: center;
+    }
+
+   #faq ul {
+       margin-right: 10px;
+   }
  
     
 }
@@ -109,320 +196,20 @@
 /*tablet landscape*/
 @media (min-width: 768px) and (max-width: 1024px) {
 
-    body{
-        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-        width: 99%;
-    }
-
-    .logo{
-        width: 150px;
-        height: 280px;
-        position: relative;
-        top: -70px;
-    }
-
-    .footer{
-        height: 50px;
-        color: white;    
-        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-        width: 101%;   
-        margin-left: -10px;
-    }
-
-    .footer-text{
-        margin-left: 10px;
-        font-size: 20px;
-        margin-top: 20px;
     
-    }
-
-    header  {
-        display: flex;
-    }
-
-    #menu{
-        list-style: none;
-        display: flex;        
-        padding-top: 30px;
-    }
-
-    .hoofdnav {
-        padding-left: 50px;
-        text-decoration: none;
-        list-style: none;
-        font-size: 25px;
-        color: white;
-    }
-
-    a:hover{
-        text-decoration: underline;
-    }
-
-    #icon1{
-        width: 30px;
-    }
-
-    #socials{  
-        margin: 0;
-        padding: 0;
-        border: 4px solid white;
-        color: white;
-        font-size: 25px;
-        font-weight: bolder;   
-        margin-left: 35px;
-        margin-right: 40px;
-        margin-top: 40px;
-
-    }
-
-    #socials p{
-        font-size: 30px;
-        text-align: center;
-    }
-
-    #faq{
-        display: flex;
-        flex-direction: row;
-        padding-left: 40px;
-        margin-top: 40px;
-        margin-bottom: 160px;
-        font-size: 20px;
-        font-weight: bolder;
-    
-    }
-
-    #faq img{
-        padding-right: 10px;
-    }
-
-    #faq p{
-        padding-left: 35px;
-        padding-right: 35px;
-    }
- 
 
 }
 
 /*phone*/
 @media screen and (max-width: 767px){
 
-    Body{
-        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-        width: 99%;
-    }
-    
-    .logo{
-        width: 150px;
-        height: 280px;
-        position: relative;
-        top: -70px;
-    }
-    
-    footer{
-        height: 50px;
-        color: white;    
-        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-        width: 101%;   
-        margin-left: -10px;
-    }
-    
-    .footer-text{
-        margin-left: 10px;
-        font-size: 20px;
-        margin-top: 20px;
-      
-    }
-    
-    header  {
-        display: flex;
-    }
-    
-    #menu{
-        list-style: none;
-        display: flex;        
-        padding-top: 30px;
-    }
-    
-    .hoofdnav {
-        padding-left: 50px;
-        text-decoration: none;
-        list-style: none;
-        font-size: 25px;
-        color: white;
-    }
-    
-    a:hover{
-        text-decoration: underline;
-    }
-    
-    #icon1{
-        width: 30px;
-    }
-         
-    #container7{  
-        margin: 0;
-        padding: 0;
-        border: 4px solid white;
-        color: white;
-        font-size: 25px;
-        font-weight: bolder;   
-        margin-left: 35px;
-        margin-right: 40px;
-        margin-top: 40px;
-    
-    }
-    
-    #container7 p{
-        font-size: 30px;
-        text-align: center;
-    }
-    
-    #container8{
-        display: flex;
-        flex-direction: row;
-        padding-left: 40px;
-        margin-top: 40px;
-        margin-bottom: 160px;
-        font-size: 20px;
-        font-weight: bolder;
-       
-    }
-    
-    #container8 p{
-        padding-left: 35px;
-        padding-right: 35px;
-    }
-    
-    #container8 img{
-        padding-right: 10px;
-    }
-
-    .bigscreen{
-        display: none;
-    }
-
-    .tablet{
-        display: none;
-    }
-
-    .tabletlandscape{
-        display: none;
-    }
-
-    .phonelandscape{
-        display: none;
-    }
+   
 }
 
 /*landscape phone*/
 @media (min-width : 319px) and (max-width: 480px){
     
-    Body{
-        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-        width: 99%;
-    }
-    
-    .logo{
-        width: 150px;
-        height: 280px;
-        position: relative;
-        top: -70px;
-    }
-    
-    .footer{
-        height: 50px;
-        color: white;    
-        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-        width: 101%;   
-        margin-left: -10px;
-    }
-    
-    .footer-text{
-        margin-left: 10px;
-        font-size: 20px;
-        margin-top: 20px;
-      
-    }
-    
-    header  {
-        display: flex;
-    }
-    
-    #menu{
-        list-style: none;
-        display: flex;        
-        padding-top: 30px;
-    }
-    
-    .hoofdnav {
-        padding-left: 50px;
-        text-decoration: none;
-        list-style: none;
-        font-size: 25px;
-        color: white;
-    }
-    
-    a:hover{
-        text-decoration: underline;
-    }
-    
-    #icon1{
-    width: 30px;
-    }
    
-    #container9{  
-    margin: 0;
-    padding: 0;
-    border: 4px solid white;
-    color: white;
-    font-size: 25px;
-    font-weight: bolder;   
-    margin-left: 35px;
-    margin-right: 40px;
-    margin-top: 40px;
-    
-    }
-    
-    #container9 p{
-    font-size: 30px;
-    text-align: center;
-    }
-    
-    #container10{
-        display: flex;
-        flex-direction: row;
-        padding-left: 40px;
-        margin-top: 40px;
-        margin-bottom: 160px;
-        font-size: 20px;
-        font-weight: bolder;
-       
-    }
-    
-    #container10 p{
-        padding-left: 35px;
-        padding-right: 35px;
-    }
-
-    #container10 img{
-        padding-right: 10px;
-    }
-
-    .bigscreen{
-        display: none;
-    }
-
-    .tablet{
-        display: none;
-    }
-
-    .tabletlandscape{
-        display: none;
-    }
-
-    .phone{
-        display: none;
-    }
     
 }
 
