--- a/css/Quick-Boost.css
+++ b/css/Quick-Boost.css
@@ -58,7 +58,7 @@ Body{
     display: block;
     position: relative;
     left: -200px;
-    top: -200px;
+    top: -150px;
     width: 1200px;
     height: 700px;
 
@@ -76,8 +76,10 @@ Body{
 
 
 .hoofdnav {
-    
-    padding-left: 80px;
+    position: relative;
+    left: 500px;
+    top: 28px;
+    padding-left: 40px;
     text-decoration: none;
     list-style: none;
     font-size: 40px;
