--- a/css/evenementen.css
+++ b/css/evenementen.css
@@ -40,14 +40,14 @@ Body{
 
 
 .drake-img-box{
-  
-  position: relative;
+  margin-left: 10px;
+  position: absolute;
   height: 800px;
 }
 
 .drake-img{
-  height: 600px;
-  width: 500px;
+  height: 450px;
+  width: 600px;
   border-style: solid;
   border-color: white;
 }
