--- a/css/contact.css
+++ b/css/contact.css
@@ -111,10 +111,9 @@
     }
     
     .logo{
-        width: 300px;
-        height: 280px;
-        position: relative;
-        top: -70px;
+        width: 150px;
+        top: -10px;
+        
     }
     
     .footer{
@@ -199,103 +198,7 @@
     
 }
 
-/* tablet landscape (kan deze weg?)*/
-@media (min-width:768px) and (max-width:1024px) {
-    body{
-        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-        width: 99%;
-    }
-    
-    .logo{
-        width: 300px;
-        height: 280px;
-        position: relative;
-        top: -70px;
-    }
-    
-    .footer{
-        height: 50px;
-        color: white;    
-        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-        width: 101%;   
-        margin-left: -10px;
-    }
-    
-    .footer-text{
-        margin-left: 10px;
-        font-size: 20px;
-        margin-top: 20px;
-      
-    }
-    
-    header  {
-        display: flex;
-    }
-
-    article{
-        display: flex;
-        
-    }
-    
-    #menu{
-        list-style: none;
-        display: flex;
-        padding-top: 30px;
-        padding-left: 0;
-    }
-    
-    .hoofdnav {
-        padding-left: 25px;
-        text-decoration: none;
-        list-style: none;
-        font-size: 30px;
-        color: white;
-    }
-    
-    a:hover{
-        text-decoration: underline;
-    }
-    
-    #icon1{
-        width: 30px;
-    }
-      
-    #socials{
-        font-size: 25px; 
-        margin-left: 35px;
-    }
-    
-    #socials p{
-        font-weight: bolder;
-    }
-
-    #socials img{
-        padding-right: 10px;
-    }
-    
-    #faq{  
-        border: 4px solid white;
-        color: white;
-        font-size: 23px;
-        font-weight: bolder;   
-        margin-left: 30px;
-        margin-bottom: 100px;
-        margin-right: 20px;
-    }
-    
-    #faq p{
-        font-size: 30px;
-        text-align: center;
-    }
-
-   #faq ul {
-       margin-right: 10px;
-   }
- 
-
-}
-
-/*phone EN tablet portrait*/
+/*phone en tablet portrait*/
 @media screen and (max-width:768px){
     body{
         background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
@@ -390,102 +293,6 @@
    
 }
 
-/*landscape phone (kan deze weg)*/
-@media (min-width : 375px) and (max-width:768px){
-    body{
-        background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-        width: 99%;
-    }
-    
-    .logo{
-        width: 300px;
-        height: 280px;
-        position: relative;
-        top: -70px;
-    }
-    
-    .footer{
-        height: 50px;
-        color: white;    
-        background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-        width: 101%;   
-        margin-left: -10px;
-    }
-    
-    .footer-text{
-        margin-left: 10px;
-        font-size: 20px;
-        margin-top: 20px;
-      
-    }
-    
-    header  {
-        display: flex;
-    }
 
-    article{
-        display: flex;
-        
-    }
-    
-    #menu{
-        list-style: none;
-        display: flex;
-        padding-top: 30px;
-        padding-left: 0;
-    }
-    
-    .hoofdnav {
-        padding-left: 25px;
-        text-decoration: none;
-        list-style: none;
-        font-size: 30px;
-        color: white;
-    }
-    
-    a:hover{
-        text-decoration: underline;
-    }
-    
-    #icon1{
-        width: 30px;
-    }
-      
-    #socials{
-        font-size: 25px; 
-        margin-left: 35px;
-    }
-    
-    #socials p{
-        font-weight: bolder;
-    }
-
-    #socials img{
-        padding-right: 10px;
-    }
-    
-    #faq{  
-        border: 4px solid white;
-        color: white;
-        font-size: 23px;
-        font-weight: bolder;   
-        margin-left: 30px;
-        margin-bottom: 100px;
-        margin-right: 20px;
-    }
-    
-    #faq p{
-        font-size: 30px;
-        text-align: center;
-    }
-
-   #faq ul {
-       margin-right: 10px;
-   }
- 
-    
-   
-    
-}
 
 
