--- a/css/Quick-Boost.css
+++ b/css/Quick-Boost.css
@@ -100,7 +100,10 @@ a:hover{
 }
 
 
-
+.backgroundImage{
+    width:300px;
+    height:300px;
+}
 
 
 /*telefoon*/
@@ -155,6 +158,8 @@ a:hover{
         width: 200px;
         height: 200px;
     }
+
+   
     
     .drieblikjes{
         display: block;
@@ -282,8 +287,8 @@ and (orientation : portrait) {
         display: block;
         position: relative;
         top: -130px;
-        left: 0px;
-        width: 800px;
+        left: -90px;
+        width: 900px;
         height: 600px;
     }
     
