--- a/css/evenementen.css
+++ b/css/evenementen.css
@@ -3,11 +3,11 @@
 }
 
 
-
 Body{
   display: block;
   background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
   width: 99%;
+  
 }
 
 .logo{
@@ -39,8 +39,8 @@ Body{
 }
 
 .maps-img{
-  margin-bottom: 100px;
-  margin-left: 210px;
+  margin-top: -5000px;
+  margin-left: 1200px;
   height: 500px;
   width: 500px;
   border-style: solid;
@@ -48,8 +48,8 @@ Body{
 }
 
 .drake-img{
-  margin-bottom: 100px;
-  margin-left: 250px;
+  margin-top: -90px;
+  margin-left: 200px;
   height: 500px;
   width: 500px;
   border-style: solid;
@@ -58,22 +58,22 @@ Body{
 
 .drake-tekst{
   height: 20vh;
-  margin-left: 1150px;
-  margin-bottom: -70px;
+  margin-left: 400px;
+  margin-top: -80px;
   font-size: 35px;
   color: white;
 }
 
 .info-tekst{
-  margin-left: 900px;
+  margin-right: -500px;
   margin-bottom: 150px;
   font-size: 17px;
   color: white;
 }
 
 .locatie-tekst{
-  margin-left: 250px;
-  margin-top: -520px;
+  margin-left: 1250px;
+  margin-top: -400px;
   font-size: 17px;
   color: white;
   height: 20vh;
@@ -86,34 +86,6 @@ Body{
   list-style: none;
   
 }
-
-.adblikjes{
-  display: block;
-  width: 200px;
-  height: 200px;
-}
-
-.drieblikjes{
-  display: block;
-  position: relative;
-  left: -200px;
-  top: -200px;
-  width: 1200px;
-  height: 700px;
-
-}
-
-.images{
-  display: block;
-  position: relative;
-  top: 100px;
-  width: 900px;
-  height: 600px;
-}
-
-
-
-
 .hoofdnav {
   position: relative;
   left: 800px;
@@ -130,7 +102,6 @@ Body{
 a:hover{
   text-decoration: underline;
 }
-
 
 
 
@@ -142,135 +113,112 @@ a:hover{
 /*telefoon*/
 
 @media screen and (max-width: 767px){
-}
-
-Body{
-  display: block;
-  background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
-  width: 99%;
-}
-
-.logo{
-  width: 300px;
-  height: 280px;
-  position: relative;
-  top: -70px;
-}
-.footer{
-  height: 50px;
-  color: white;
-  margin-top: 300px;
-  background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
-  width: 101%;
-  margin-left: -10px;
-}
-
-.footertext{
-  display: block;
-  position: absolute;
-  top: 40px;
-  margin-left: 15px;
-  font-size: 20px;
-  color: black;
-
-}
-
-.maps-img{
-  margin-bottom: 100px;
-  margin-left: 210px;
-  height: 500px;
-  width: 500px;
-  border-style: solid;
-  border-color: white;
-}
-
-.drake-img{
-  margin-bottom: 100px;
-  margin-left: 250px;
-  height: 500px;
-  width: 500px;
-  border-style: solid;
-  border-color: white;
-}
-
-.drake-tekst{
-  height: 20vh;
-  margin-left: 1150px;
-  margin-bottom: -70px;
-  font-size: 35px;
-  color: white;
-}
-
-.info-tekst{
-  margin-left: 900px;
-  margin-bottom: 150px;
-  font-size: 17px;
-  color: white;
-}
-
-.locatie-tekst{
-  margin-left: 250px;
-  margin-top: -520px;
-  font-size: 17px;
-  color: white;
-  height: 20vh;
-}
-
-
-#menu{
-  display: flex;
-  flex-direction: row;
-  list-style: none;
+  ody{
+    display: block;
+    background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
+    width: 99%;
+  }
   
-}
-
-.adblikjes{
-  display: block;
-  width: 200px;
-  height: 200px;
-}
-
-.drieblikjes{
-  display: block;
-  position: relative;
-  left: -200px;
-  top: -200px;
-  width: 1200px;
-  height: 700px;
-
-}
-
-.images{
-  display: block;
-  position: relative;
-  top: 100px;
-  width: 900px;
-  height: 600px;
-}
-
-
-
-
-.hoofdnav {
-  position: relative;
-  left: 800px;
-  top: -250px;
-  padding-left: 40px;
-  text-decoration: none;
-  list-style: none;
-  font-size: 40px;
-  color: white;
+  .logo{
+    display: block;
+    width: 130px;
+    height: 130px;
+    position: relative;
+    top: -40px;
+  }
+  .footer{
+    height: 50px;
+    color: white;
+    margin-top: 50px;
+    background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
+    width: 101%;
+    margin-left: -10px;
+  }
+  
+  .footertext{
+    display: block;
+    position: absolute;
+    top: 60px;
+    margin-left: 15px;
+    font-size: 20px;
+    color: black;
+  
+  }
+  
+  .maps-img{
+    margin-top: 200px;
+    margin-left: 75px;
+    height: 200px;
+    width: 200px;
+    border-style: solid;
+    border-color: white;
+  }
+  
+  .drake-img{
+    margin-top: 50px;
+    margin-left: 75px;
+    height: 200px;
+    width: 200px;
+    border-style: solid;
+    border-color: white;
+  }
+  
+  .drake-tekst{
+    height: 0px;
+    margin-left: 140px;
+    margin-top: -90px;
+    font-size: 20px;
+    color: white;
+  }
+  
+  .info-tekst{
+    margin-left: -5px;
+    margin-top: -400px;
+    font-size: 5.8px;
+    color: white;
+  }
+  
+  .locatie-tekst{
+    margin-left: 80px;
+    margin-top: 350px;
+    font-size: 7px;
+    color: white;
+    height: 20vh;
+  }
   
   
+  #menu{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+  
+  }
+  .hoofdnav {
+    display: block;
+    position: relative;
+    top: -130px;
+    left: 100px;
+    padding-left: 5px;
+    text-decoration: none;
+    list-style: none;
+    float: left;
+    font-size: 15px;
+    color: white;
+  
+  
+  
+  }
+  
+  a:hover{
+    text-decoration: underline;
+  }
 }
 
-a:hover{
-  text-decoration: underline;
-}
+
 
 /*landscape phone*/
 @media (min-width : 319px) and (max-width: 480px){
-  
+
 }
 
 /*ipad landscape*/
@@ -278,7 +226,7 @@ a:hover{
 @media (min-width: 768px) and (max-width: 1024px) {
 
 
-  
+
 }
 
 /*tablet potrait*/
@@ -288,3 +236,9 @@ and (max-device-width : 1024px)
 and (orientation : portrait) { 
 
 }
+
+
+
+
+
+
