--- a/css/evenementen.css
+++ b/css/evenementen.css
@@ -113,7 +113,7 @@ a:hover{
 /*telefoon*/
 
 @media screen and (max-width: 767px){
-  ody{
+  body{
     display: block;
     background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
     width: 99%;
@@ -233,7 +233,107 @@ a:hover{
 @media only screen 
 and (min-device-width : 768px) 
 and (max-device-width : 1024px)
-and (orientation : portrait) { 
+and (orientation : portrait) {
+  
+  Body{
+    display: block;
+    background: linear-gradient(58deg, rgba(77,255,248,1) 21%, rgba(255,99,162,1) 61%); 
+    width: 99%;
+    
+  }
+  
+  .logo{
+    display: block;
+    width: 200px;
+    height: 180px;
+    position: relative;
+    top: -60px;
+  }
+  
+  .footer{
+  
+    height: 50px;
+    color: white;
+    margin-top: 300px;
+    background: linear-gradient(90deg, rgba(255,99,162,1) 49%, rgba(77,255,248,1) 50%);
+    width: 101%;
+    margin-left: -10px;
+  }
+  
+  .footertext{
+    display: block;
+    position: absolute;
+    top: 40px;
+    margin-left: 15px;
+    font-size: 20px;
+    color: black;
+  
+  }
+  
+  .maps-img{
+    margin-bottom: 20px;
+    margin-left: 450px;
+    height: 250px;
+    width: 250px;
+    border-style: solid;
+    border-color: white;
+  }
+  
+  .drake-img{
+    margin-top: -150px;
+    margin-left: 70px;
+    height: 250px;
+    width: 250px;
+    border-style: solid;
+    border-color: white;
+  }
+  
+  .drake-tekst{
+    height: 20vh;
+    margin-left: 140px;
+    margin-top: -60px;
+    font-size: 20px;
+    color: white;
+  }
+  
+  .info-tekst{
+    margin-right: -500px;
+    margin-bottom: 150px;
+    font-size: 10px;
+    color: white;
+  }
+  
+  .locatie-tekst{
+    margin-left: 450px;
+    margin-top: -300px;
+    font-size: 10px;
+    color: white;
+    height: 20vh;
+  }
+  
+  
+  #menu{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    
+  }
+  .hoofdnav {
+    position: relative;
+    left: 150px;
+    top: -185px;
+    padding-left: 40px;
+    text-decoration: none;
+    list-style: none;
+    font-size: 30px;
+    color: white;
+    
+    
+  }
+  
+  a:hover{
+    text-decoration: underline;
+  }
 
 }
 
